--- a/Projeto/tickets.html
+++ b/Projeto/tickets.html
@@ -108,15 +108,16 @@
                 <label for="Race">Race</label>
                 <select id="Race" class="form-control">
                     <option value="0" selected>Choose The Race</option>
-                    <option value="1">uma delas</option>
-                    <option value="2">uma delas</option>
-                    <option value="3">uma delas</option>
-                    <option value="4">uma delas</option>
+                    <option value="1">Sakhir Circuit 18 - 20 Mar</option>
+                    <option value="2">Jeddah Circuit 25 - 27 Mar (Provisional date)</option>
+                    <option value="3">Albert Park Circuit 08 - 10 Apr (Provisional date)</option>
+                    <option value="4">Autodromo Enzo e Dino Ferrari 22 - 24 Apr (Provisional date)</option>
+                    <option value="5">Hard Rock Stadium 06 - 08 May (Provisional date)</option>
                 </select>
                 <div class="d-none text-danger col-form-label" id="RaceError"><i class="fa fa-exclamation-triangle"></i>This Field is Mandatory (Choose a Race)</div>
             </div>
             <br />
-            <a href="tickets1.html" type="submit" id="submit" class="btn btn-primary">Continue</a>
+            <a href="tickets1.html" type="submit" id="submit" class="btn btn-dark">Continue</a>
         </form>
     </div>
 
