--- a/Aulas/Aula10/conference.html
+++ b/Aulas/Aula10/conference.html
@@ -6,8 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
-    <link href="../Content/bootstrap.min.css" rel="stylesheet" />               <!-- https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css -->
-    <link href="../Content/font-awesome.min.css" rel="stylesheet" />            <!-- https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css -->
+    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" -->
     <link href="../Content/themes/base/jquery-ui.min.css"  rel="stylesheet"/>
     <style>
         body { font-family: 'Open Sans', Arial }
