--- a/Projeto/tickets.html
+++ b/Projeto/tickets.html
@@ -74,16 +74,16 @@
         <form>
             <div class="form-group col-md-6" style="background-color:white; padding: 20px; border-radius: 10px;">
                 <label for="inputEmail">Email</label>
-                <input class="form-control" type="text" name="Email" id="inputEmail" placeholder="Email">
+                <input class="form-control" type="email" name="Email" id="inputEmail" placeholder="Email">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                <div class="d-none text-danger col-form-label" id="EmailError"><i class="fa fa-exclamation-triangle"></i> This Fiels is Mandatory (@ mandatory).</div>
+                <div class="d-none text-danger col-form-label" id="EmailError"><i class="fa fa-exclamation-triangle"></i> This Field is Mandatory (@ mandatory).</div>
             </div>
             <br />
             <div class="form-group col-md-6" style="background-color: white; padding: 20px; border-radius: 10px;">
                 <label for="inputName">Name</label>
                 <input type="text" class="form-control" id="inputName" placeholder="Full Name">
                 <small id="nameHelp" class="form-text text-muted">We'll never share your name with anyone else.</small>
-                <div class="d-none text-danger col-form-label" id="NameError"><i class="fa fa-exclamation-triangle"></i> This Fiels is Mandatory (Min: 3 letters).</div>
+                <div class="d-none text-danger col-form-label" id="NameError"><i class="fa fa-exclamation-triangle"></i> This Field is Mandatory (Min: 3 letters).</div>
             </div>
             <br />
             <div class="form-row" style="background-color: white; padding: 20px; border-radius: 10px;">
