--- a/Projeto/constructors2021.html
+++ b/Projeto/constructors2021.html
@@ -14,42 +14,45 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
-                F1Tracker
-                <div class="fa fa-flag-checkered"></div>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
-                    <li class="nav-item"> 
-                        <div class="dropdown">
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
+            F1Tracker
+            <div class="fa fa-flag-checkered"></div>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
+                <li class="nav-item">
+                    <div class="dropdown">
                         <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
                             <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
-                            </ul>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
-                    <li class="nav-item">
-                        <div class="dropdown">
-                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <li><a class="dropdown-item" href='history.html'>History</a></li>
-                                <li><a class="dropdown-item" href="legends.html">Legends</a></li>
-                                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+                        </ul>
+                    </div>
+                <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
+                <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
+                <li class="nav-item"><a class="nav-link" aria-current="page" href="races.html">Races</a></li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li><a class="dropdown-item" href='history.html'>History</a></li>
+                            <li><a class="dropdown-item" href="legends.html">Legends</a></li>
+                            <li><a class="dropdown-item" href="rules.html">Rules</a></li>
+                            <li><a class="dropdown-item" href="tickets.html">Buy Tickets</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
         </div>
-    </nav>
-    <div class="filler" style="width:100%;height:50px"></div>
+    </div>
+</nav>
+<div class="filler" style="width:100%;height:70px"></div>
     <div class = "container">
         <div class="border-bottom border-dark  pt-4 pb-2 mb-3">
         <h2 style = "font-weight:bold">2021 Teams</h2>
