--- a/Projeto/tickets2.html
+++ b/Projeto/tickets2.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8" />
 </head>
-<body>
+<body style="background-image: url(https://www.formula1.com/content/dam/fom-website/manual/Getty/Singapore_2019/Sunday/GettyImages-1176346667.jpg.transform/9col/image.jpg); background-repeat: no-repeat; background-size: cover; background-position: center">
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
@@ -61,7 +61,7 @@
                 <a class="nav-link disabled" aria-disabled="true" href="#"></a>
             </li>
             <li class="nav-item2">
-                <a class="nav-link disabled" style="background-color: grey ;" href="#" tabindex="-1" aria-disabled="true">Lugar</a>
+                <a class="nav-link disabled" style="background-color: grey ;" href="#" tabindex="-1" aria-disabled="true">Places</a>
             </li>
             <li class="nav-item2">
                 <a class="nav-link disabled" aria-disabled="true" href="#"></a>
