--- a/Aulas/Aula10/conference.html
+++ b/Aulas/Aula10/conference.html
@@ -181,10 +181,10 @@
             </div>
         </div>
     </div>
-    <script src="../Scripts/jquery-3.6.0.min.js"></script>      <!-- https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js -->
-    <script src="../Scripts/bootstrap.bundle.min.js"></script>  <!-- https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js -->
-    <script src="../Scripts/knockout-3.5.1.js"></script>
-    <script src="../Scripts/jquery-ui-1.13.0.min.js"></script>
+    <script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"> </script>
+    <script src="../../Scripts/knockout-3.5.1.js"></script>
+    <script src="../../Scripts/jquery-ui-1.13.0.min.js"></script>
     <script src="conference.js"></script>
 </body>
 </html>
