--- a/Projeto/tickets1.html
+++ b/Projeto/tickets1.html
@@ -97,7 +97,7 @@
                 <input class="form-check-input" onclick="setTimeout(pricechecker,50)" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="400.39">
                 <label class="form-check-label" for="inlineRadio4">Premium Hospitality (from 400,39€)</label>
             </div>
-            <div class="d-none text-danger col-form-label" id="positionError"><i class="fa fa-exclamation-triangle"></i> Este campo é de preenchimento obrigatório (Escolha uma cor).</div>
+            <div class="d-none text-danger col-form-label" id="positionError"><i class="fa fa-exclamation-triangle"></i>This Field is mandatory (Choose a position).</div>
             <br />
             <br />
             <a href="tickets.html" type="button" id="back" class="btn btn-secondary">Go back</a>
