--- a/Projeto/tickets2.html
+++ b/Projeto/tickets2.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8" />
 </head>
-<body style="background-image: url(https://www.formula1.com/content/dam/fom-website/manual/Getty/Singapore_2019/Sunday/GettyImages-1176346667.jpg.transform/9col/image.jpg); background-repeat: no-repeat; background-size: cover; background-position: center">
+<body style="background-image: url(); background-repeat: no-repeat; background-size: cover; background-position: center">
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
@@ -71,6 +71,44 @@
             </li>
         </ul>
         <br />
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Launch demo modal
+        </button>
+        <div class="modal fade" id="exampleModal" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="exampleModalLabel">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">ATM References</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container container-inside">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-9">
+                                    <h5>Entity</h5>
+                                    <h5 style="margin-bottom: 1rem;">17826</h5>
+                                </div>
+                                <div class="col-sm-12 col-md-3">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpIZmXfunMJPP9TTP_WxcmNYsmCCYgkbU4Eo6GVR9n5MDm8DwEDXzrC6OiqkUvD3sQ3CM&usqp=CAU" alt="">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12 col-md-10">
+                                    <h5>Reference</h5>
+                                    <h5 style="margin-bottom: 1rem;">123 456 789</h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12 col-md-10">
+                                    <h5>Amount</h5>
+                                    <h5 style="margin-bottom: 1rem;">14.99€</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
