--- a/Projeto/tickets2.html
+++ b/Projeto/tickets2.html
@@ -84,12 +84,12 @@
                     <div class="modal-body">
                         <div class="container container-inside">
                             <div class="row">
-                                <div class="col-sm-12 col-md-9">
+                                <div class="col-sm-9 col-md-6">
                                     <h5>Entity</h5>
                                     <h5 style="margin-bottom: 1rem;">17826</h5>
                                 </div>
                                 <div class="col-sm-12 col-md-3">
-                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpIZmXfunMJPP9TTP_WxcmNYsmCCYgkbU4Eo6GVR9n5MDm8DwEDXzrC6OiqkUvD3sQ3CM&usqp=CAU" alt="">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpIZmXfunMJPP9TTP_WxcmNYsmCCYgkbU4Eo6GVR9n5MDm8DwEDXzrC6OiqkUvD3sQ3CM&usqp=CAU" style = "width:150px;height:150px;"alt="Payment Options">
                                 </div>
                             </div>
                             <div class="row">
