--- a/Projeto/tickets.html
+++ b/Projeto/tickets.html
@@ -71,6 +71,10 @@
             </li>
         </ul>
         <br />
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <br />
         <form>
             <div class="form-group col-md-6" style="background-color:white; padding: 20px; border-radius: 10px;">
                 <label for="inputEmail">Email</label>
