--- a/Projeto/tickets.html
+++ b/Projeto/tickets.html
@@ -72,7 +72,7 @@
         </ul>
         <br />
         <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" id="barra" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <br />
         <form>
