--- a/Projeto/tickets2.html
+++ b/Projeto/tickets2.html
@@ -55,7 +55,7 @@
     <div class='container'>
         <ul class="nav nav-tabs">
             <li class="nav-item2">
-                <a class="nav-link disabled" style="background-color: grey ;" href="#" tabindex="-1" aria-disabled="true">Dados</a>
+                <a class="nav-link disabled" style="background-color: grey ;" href="#" tabindex="-1" aria-disabled="true">Data</a>
             </li>
             <li class="nav-item2">
                 <a class="nav-link disabled" aria-disabled="true" href="#"></a>
@@ -71,8 +71,12 @@
             </li>
         </ul>
         <br />
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Launch demo modal
+        <br />
+        <div>
+            <h2>You are ready to go! Just one more step.</h2>
+        </div>
+        <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Payment Details
         </button>
         <div class="modal fade" id="exampleModal" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="exampleModalLabel">
             <div class="modal-dialog">
@@ -108,6 +112,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="filler" style="width: 100%; height: 200px;">
+        </div>
+        <div>
+            <h3>Lights out and away we goo!</h3>
+            <br />
+            <img src="https://cdn.dribbble.com/users/6743410/screenshots/15376645/media/0012f969e92fd5114a3dedf33a655e65.gif" style=" width: 50%; height: 500px; float: right;" />
         </div>
     </div>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
