--- a/Projeto/tickets.html
+++ b/Projeto/tickets.html
@@ -55,7 +55,7 @@
     <div class='container'>
         <ul class="nav nav-tabs">
             <li class="nav-item2">
-                <a class="nav-link active" style="background-color: black;" aria-current="page" href="#">Dados</a>
+                <a class="nav-link active" style="background-color: black;" aria-current="page" href="#">Data</a>
             </li>
             <li class="nav-item2">
                 <a class="nav-link disabled" aria-disabled="true" href="#"></a>
@@ -70,6 +70,10 @@
                 <a class="nav-link disabled" style="background-color: grey;" href="#" tabindex="-1" aria-disabled="true">Payment</a>
             </li>
         </ul>
+        <br />
+        <div class="progress">
+            <div class="progress-bar" id="barra" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
         <br />
         <form>
             <div class="form-group col-md-6" style="background-color:white; padding: 20px; border-radius: 10px;">
