--- a/Projeto/tickets1.html
+++ b/Projeto/tickets1.html
@@ -55,7 +55,7 @@
     <div class='container'>
         <ul class="nav nav-tabs">
             <li class="nav-item2">
-                <a class="nav-link disabled" style="background-color: grey ;" href="#" tabindex="-1" aria-disabled="true">Dados</a>
+                <a class="nav-link disabled" style="background-color: grey ;" href="#" tabindex="-1" aria-disabled="true">Data</a>
             </li>
             <li class="nav-item2">
                 <a class="nav-link disabled" aria-disabled="true" href="#"></a>
