--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -113,8 +113,8 @@
                     <td class="align-middle" data-bind="text:Nationality"></td>
                     <td class="text-end">
                         <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./driverDetailsv2.html?id=' + DriverId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                        <button class="btn btn-default btn-sm" data-bind="click: () => $parent.toggleFavourite(DriverId), attr : { 'id': 'favourite_' + DriverId }">
-                            <i  class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
+                        <button class="btn btn-default btn-sm btn-outline-danger btn-favourite" data-bind="click: () => $parent.toggleFavourite(DriverId), attr : { 'id': 'favourite_' + DriverId }">
+                            <i data-bind="attr : { 'class' : $parent.favourites().includes(DriverId) ? 'fa fa-heart' : 'fa fa-heart-o'}" class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                         </button>
                     </td>
                 </tr>
