--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -26,6 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favourites.html">Favourites</a></li>
                     <li class="nav-item">
                         <div class="dropdown">
                             <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
@@ -71,9 +72,6 @@
             <span data-bind="html: 'Drivers: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
         </p>
         <div class="row-cols-3">
-            <div class="row">
-                <button class="btn-fav btn-outline-success" style="width: 200px;height:30px;margin-bottom:5px">Show Favorites</button>
-            </div>
             <div class="row">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
