--- a/Projeto/tickets1.html
+++ b/Projeto/tickets1.html
@@ -71,6 +71,10 @@
             </li>
         </ul>
         <br />
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated bg-black" id="barra" role="progressbar" style="width: 33%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <br />
         <form style="width: 55%; border-radius: 20px; padding: 50px; position: center; background-color: white;">
             <div class="row">
                 <div><b>People:</b></div>
