--- a/Projeto/tickets.html
+++ b/Projeto/tickets.html
@@ -72,7 +72,7 @@
         </ul>
         <br />
         <div class="progress">
-            <div class="progress-bar" id="barra" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated bg-black" id="barra" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <br />
         <form>
@@ -102,7 +102,7 @@
                     <small id="cityHelp" class="form-text text-muted">optional</small>
                 </div>
                 <div class="form-group col-md-2">
-                    <label for="inputZip">Zip</label>
+                    <label for="inputZip">Post-Code</label>
                     <input type="text" class="form-control" id="inputZip">
                     <small id="zipHelp" class="form-text text-muted">optional.</small>
                 </div>
