--- a/Projeto/tickets2.html
+++ b/Projeto/tickets2.html
@@ -71,12 +71,15 @@
             </li>
         </ul>
         <br />
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated bg-black" id="barra" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
         <br />
         <div>
             <h2>You are ready to go! Just one more step.</h2>
         </div>
         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Payment Details
+            Payment Details
         </button>
         <div class="modal fade" id="exampleModal" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="exampleModalLabel">
             <div class="modal-dialog">
@@ -105,7 +108,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-10">
                                     <h5>Amount</h5>
-                                    <h5 style="margin-bottom: 1rem;" id = "totalpreço"></h5>
+                                    <h5 style="margin-bottom: 1rem;" id="totalpreço"></h5>
                                 </div>
                             </div>
                         </div>
@@ -115,7 +118,7 @@
         </div>
         <div class="filler" style="width: 100%; height: 200px;">
         </div>
-        <div>
+        <div class="d-none" id="final">
             <h3>Lights out and away we goo!</h3>
             <br />
             <img src="https://cdn.dribbble.com/users/6743410/screenshots/15376645/media/0012f969e92fd5114a3dedf33a655e65.gif" style=" width: 50%; height: 500px; float: right;" />
