--- a/Projeto/tickets2.html
+++ b/Projeto/tickets2.html
@@ -123,8 +123,8 @@
             <br />
             <img src="https://cdn.dribbble.com/users/6743410/screenshots/15376645/media/0012f969e92fd5114a3dedf33a655e65.gif" style=" width: 50%; height: 500px; float: right;" />
             <br />
-            <button type="button" class="btn btn-outline-danger" data-bind="attr: { href: ''./index.html'}"> Go back to Homepage
-            </button>
+            <a class ="btn btn-outline-primary"  href = "index.html" style="text-decoration:none;">Go Back to Homepage</a>
+            
         </div>
     </div>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
