--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -126,6 +126,14 @@
                 </div>
             </div>
             <hr>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h6 class="mb-0">Constructor Champion</h6>
+                </div>
+                <div class="col-sm-9 text-secondary" data-bind="text: CWinner">
+                </div>
+            </div>
+            <hr>
             <h5><a data-bind="attr: { href: Url }">Wikipedia URL</a> </h5>
       
         <a href="#" class="card-link">Card link</a>
