--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -57,12 +57,6 @@
     <div class="filler" style="width:100%;height:60px"></div>
     <!-- Working Area -->
     <div class="container">
-        <div class="search-box">
-            <input class="search-txt" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px;" />
-            <a class="search-btn" id="button_search" style="height: 35px;" href="#" type="button">
-                <i class="fa fa-search"></i>
-            </a>
-        </div>
         <div class="border-bottom border-danger pt-4 pb-2 mb-3">
             <h2>Drivers List</h2>
         </div>
@@ -92,9 +86,12 @@
                     <!-- /ko -->
                 </ul>
             </div>
-
         </div>
         <!-- /ko -->
+        <div class="form-group input-group rounded" style="width: 30%; float: right; padding: 5px;">
+            <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px; width: 100px; border-radius: 3px;" />
+            <button class="btn btn-outline-dark" id="button_search" style="height: 35px; border-radius: 3px;" type="button"><i class="fa fa-search"></i></button>
+        </div>
         <table class="table table-striped table-sm small" id="myTable">
             <thead class="bg-dark text-light">
                 <tr>
