--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -61,28 +61,32 @@
             <div class="col-sm-12 col-md-12 col-lg-6">
         <div class="card center text-center border-dark">
             <div class="card-body">
-              <div class="card-title">
-                <h1 class ="card-header bg-success" data-bind="text: displayYear"></h1>
-              </div>
-              <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center">
-                <!-- ko if: currentPage() >= 5 -->
-                <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './seasons.html?page=' + '1',  rel:'prev'}">⇤</a></li>
-                 <!-- /ko -->
-                <!-- ko if: currentPage() >= 2-->
-                 <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './seasons.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
-                 <!-- /ko -->
-                 <!-- ko if: currentPage() != 72 -->
-                 <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './seasons.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                 <!-- /ko -->
-                 <!-- ko if: currentPage() <= 71  -->
-                 <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './seasons.html?page=' + totalPages() }">⇥</a></li>
-                 <!-- /ko -->
-                 
-                </ul>
-              </nav>
-              
-        </div>
+                <div class="card-title">
+                    <h1 class="card-header bg-success" data-bind="text: displayYear"></h1>
+                </div>
+                <div class="form-group input-group rounded" style="width: 30%; float: left; padding: 5px;">
+                    <input class="form-control me-2" placeholder="Search By Year" type="search" aria-label="Search" id="SearchText" style="height: 35px; width: 100px; border-radius: 1px;" />
+                    <button class="btn btn-outline-dark" id="button_search" style="height: 35px; border-radius: 3px;" type="button"><i class="fa fa-search"></i></button>
+                </div>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        <!-- ko if: currentPage() >= 5 -->
+                        <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './seasons.html?page=' + '1',  rel:'prev'}">⇤</a></li>
+                        <!-- /ko -->
+                        <!-- ko if: currentPage() >= 2-->
+                        <li class="page-item float-end"><a class="page-link" title="Previous Page" data-bind="attr: { href: './seasons.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
+                        <!-- /ko -->
+                        <!-- ko if: currentPage() != 72 -->
+                        <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './seasons.html?page=' + nextPage(), rel:'next' }">→</a></li>
+                        <!-- /ko -->
+                        <!-- ko if: currentPage() <= 71  -->
+                        <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './seasons.html?page=' + totalPages() }">⇥</a></li>
+                        <!-- /ko -->
+
+                    </ul>
+                </nav>
+
+            </div>
         <div class="card-text card-sm-12" style = "text-align:left;margin-left:15px">
             <div class="row">
                 <div class="col-sm-3">
