--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -147,7 +147,7 @@
     </div>
     </div>
     <div class ="col-lg-6 col-sm-6 col-md-6">
-        <table class="table d-none"  id = "tableDStand" style="width:460px;position:absolute;border:dotted 3px red;height:550px;overflow-y:scroll">
+        <table class="table d-none"  id = "tableDStand" style="width:460px;position:absolute;border:dotted 3px red;height:600px;overflow-y:scroll">
             <thead>
               <tr>
                 <th scope="col"style="padding-right:50px;text-align:center">Position</th>
@@ -164,7 +164,7 @@
               </tr>
               </tbody>
               </table>
-              <table class="table d-none" id = "tableCStand" style="width:460px;position:absolute;border:dotted 3px red;height:550px !important;overflow-y: scroll;">
+              <table class="table d-none" id = "tableCStand" style="width:460px;position:absolute;border:dotted 3px red;height:600px;overflow-y: scroll;">
                 <thead>
                   <tr>
                     <th scope="col"style="padding-right:50px;text-align:center">Points</th>
