--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -90,7 +90,7 @@
         <!-- /ko -->
         <div class="form-group input-group rounded" style="width: 30%; float: right; padding: 5px;">
             <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px; width: 100px; border-radius: 3px;" />
-            <button class="btn btn-outline-dark" id="button_search" style="height: 35px; border-radius: 3px;" type="button"><i class="fa fa-search"></i></button>
+            <button class="btn btn-outline-dark" id="button_search" style="height: 35px; border-radius: 3px;" type="button"><i class="fa fa-times-circle"></i></button>
         </div>
         <table class="table table-striped table-sm small" id="myTable">
             <thead class="bg-dark text-light">
